@@ -20,21 +20,23 @@ package org.apache.syncope.core.provisioning.java.pushpull;
 
 import java.util.Base64;
 import java.util.Optional;
+import java.util.Set;
 import javax.xml.bind.DatatypeConverter;
-import org.apache.syncope.common.lib.request.AbstractPatchItem;
-import org.apache.syncope.common.lib.request.AnyCR;
-import org.apache.syncope.common.lib.request.AnyUR;
-import org.apache.syncope.common.lib.request.PasswordPatch;
-import org.apache.syncope.common.lib.request.UserCR;
-import org.apache.syncope.common.lib.request.UserUR;
+import org.apache.commons.lang3.tuple.Pair;
 import org.apache.syncope.common.lib.to.EntityTO;
-import org.apache.syncope.common.lib.to.ProvisioningReport;
 import org.apache.syncope.common.lib.to.UserTO;
 import org.apache.syncope.common.lib.types.CipherAlgorithm;
 import org.apache.syncope.core.persistence.api.dao.UserDAO;
 import org.apache.syncope.core.persistence.api.entity.user.User;
 import org.apache.syncope.core.provisioning.api.pushpull.ProvisioningProfile;
+import org.apache.syncope.common.lib.to.ProvisioningReport;
+import org.apache.syncope.common.lib.types.AnyTypeKind;
+import org.apache.syncope.core.persistence.api.entity.resource.Provision;
 import org.apache.syncope.core.provisioning.api.pushpull.PullActions;
+import org.identityconnectors.common.security.GuardedString;
+import org.identityconnectors.common.security.SecurityUtil;
+import org.identityconnectors.framework.common.objects.AttributeUtil;
+import org.identityconnectors.framework.common.objects.OperationalAttributes;
 import org.identityconnectors.framework.common.objects.SyncDelta;
 import org.quartz.JobExecutionException;
 import org.slf4j.Logger;
@@ -53,49 +55,28 @@ public class LDAPPasswordPullActions implements PullActions {
     @Autowired
     protected UserDAO userDAO;
 
-    protected String encodedPassword;
-
-    protected CipherAlgorithm cipher;
-
-    @Transactional(readOnly = true)
     @Override
-    public void beforeProvision(
-            final ProvisioningProfile<?, ?> profile,
-            final SyncDelta delta,
-            final AnyCR anyCR) throws JobExecutionException {
-
-        if (anyCR instanceof UserCR) {
-            String password = ((UserCR) anyCR).getPassword();
-            parseEncodedPassword(password);
+    public Set<String> moreAttrsToGet(final ProvisioningProfile<?, ?> profile, final Provision provision) {
+        if (AnyTypeKind.USER == provision.getAnyType().getKind()) {
+            return Set.of(OperationalAttributes.PASSWORD_NAME);
         }
+        return PullActions.super.moreAttrsToGet(profile, provision);
     }
 
-    @Transactional(readOnly = true)
-    @Override
-    public void beforeUpdate(
-            final ProvisioningProfile<?, ?> profile,
-            final SyncDelta delta,
-            final EntityTO entityTO,
-            final AnyUR anyUR) throws JobExecutionException {
-
-        if (anyUR instanceof UserUR) {
-            PasswordPatch modPassword = ((UserUR) anyUR).getPassword();
-            parseEncodedPassword(Optional.ofNullable(modPassword).map(AbstractPatchItem::getValue).orElse(null));
-        }
-    }
-
-    protected void parseEncodedPassword(final String password) {
+    private static Optional<Pair<String, CipherAlgorithm>> parseEncodedPassword(final String password) {
         if (password != null && password.startsWith("{")) {
+            String digest = Optional.ofNullable(
+                    password.substring(1, password.indexOf('}'))).map(String::toUpperCase).
+                    orElse(null);
             int closingBracketIndex = password.indexOf('}');
-            String digest = password.substring(1, password.indexOf('}')).toUpperCase();
             try {
-                encodedPassword = password.substring(closingBracketIndex + 1);
-                cipher = CipherAlgorithm.valueOf(digest);
+                return Optional.of(
+                        Pair.of(password.substring(closingBracketIndex + 1), CipherAlgorithm.valueOf(digest)));
             } catch (IllegalArgumentException e) {
                 LOG.error("Cipher algorithm not allowed: {}", digest, e);
-                encodedPassword = null;
             }
         }
+        return Optional.empty();
     }
 
     @Transactional
@@ -106,16 +87,19 @@ public class LDAPPasswordPullActions implements PullActions {
             final EntityTO entity,
             final ProvisioningReport result) throws JobExecutionException {
 
-        if (entity instanceof UserTO && encodedPassword != null && cipher != null) {
+        if (entity instanceof UserTO) {
             User user = userDAO.find(entity.getKey());
             if (user != null) {
-                byte[] encodedPasswordBytes = Base64.getDecoder().decode(encodedPassword.getBytes());
-                String encodedHexStr = DatatypeConverter.printHexBinary(encodedPasswordBytes).toUpperCase();
+                GuardedString passwordAttr = AttributeUtil.getPasswordValue(delta.getObject().getAttributes());
+                if (passwordAttr != null) {
+                    parseEncodedPassword(SecurityUtil.decrypt(passwordAttr)).ifPresent(encoded -> {
+                        byte[] encodedPasswordBytes = Base64.getDecoder().decode(encoded.getLeft().getBytes());
+                        String encodedHexStr = DatatypeConverter.printHexBinary(encodedPasswordBytes).toUpperCase();
 
-                user.setEncodedPassword(encodedHexStr, cipher);
+                        user.setEncodedPassword(encodedHexStr, encoded.getRight());
+                    });
+                }
             }
-            encodedPassword = null;
-            cipher = null;
         }
     }
 }
